--- a/html-files/dark-light-mode.html
+++ b/html-files/dark-light-mode.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="toggle-dark.css" />
+    <style>
+      .toggle-dark{
+        background-color: #353839;
+        color: white;
+      }
+    </style>
   </head>
   <body>
     <h2>dark-mode</h2>
